notam/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    EVERY
    MINUS
    PLUS

Grammar

Rule 0     S' -> schedule
Rule 1     schedule -> timeslice schedule
Rule 2     schedule -> timeslice
Rule 3     timeslice -> complexdate GROUP
Rule 4     timeslice -> complexdate AND
Rule 5     timeslice -> complexdate
Rule 6     complexdate -> MONTH DATE AND
Rule 7     complexdate -> MONTH datelist timeslots
Rule 8     complexdate -> MONTH daterange timeslots
Rule 9     complexdate -> datelist timeslots
Rule 10    complexdate -> daterange timeslots
Rule 11    complexdate -> datelist timeslots exclusion
Rule 12    complexdate -> MONTH datelist timeslots exclusion
Rule 13    complexdate -> MONTH DATE RANGE MONTH DATE timeslots
Rule 14    complexdate -> MONTH datelist1 MONTH datelist2 timeslots
Rule 15    complexdate -> DAILY timeslots
Rule 16    complexdate -> timeslots
Rule 17    complexdate -> daylist timeslots
Rule 18    complexdate -> dayrange timeslots
Rule 19    complexdate -> DAILY timeslots exclusion
Rule 20    dayrange -> DAY RANGE DAY
Rule 21    datelist -> DATE datelist
Rule 22    datelist -> DATE AND DATE
Rule 23    datelist -> DATE
Rule 24    datelist1 -> DATE datelist1
Rule 25    datelist1 -> DATE AND DATE
Rule 26    datelist1 -> DATE
Rule 27    datelist2 -> DATE datelist2
Rule 28    datelist2 -> DATE AND DATE
Rule 29    datelist2 -> DATE
Rule 30    daterange -> DATE RANGE DATE
Rule 31    daylist -> DAY daylist
Rule 32    daylist -> DAY AND DAY
Rule 33    daylist -> DAY
Rule 34    timeslots -> timerange timeslots
Rule 35    timeslots -> timerange
Rule 36    timerange -> HOUR RANGE HOUR
Rule 37    timerange -> SUNRISE RANGE HOUR
Rule 38    timerange -> HOUR RANGE SUNSET
Rule 39    timerange -> SUNRISE RANGE SUNSET
Rule 40    timerange -> H24
Rule 41    exclusion -> EXC exc_weekdays
Rule 42    exc_weekdays -> DAY exc_weekdays
Rule 43    exc_weekdays -> HOL exc_weekdays
Rule 44    exc_weekdays -> DAY
Rule 45    exc_weekdays -> HOL

Terminals, with rules where they appear

AND                  : 4 6 22 25 28 32
DAILY                : 15 19
DATE                 : 6 13 13 21 22 22 23 24 25 25 26 27 28 28 29 30 30
DAY                  : 20 20 31 32 32 33 42 44
EVERY                : 
EXC                  : 41
GROUP                : 3
H24                  : 40
HOL                  : 43 45
HOUR                 : 36 36 37 38
MINUS                : 
MONTH                : 6 7 8 12 13 13 14 14
PLUS                 : 
RANGE                : 13 20 30 36 37 38 39
SUNRISE              : 37 39
SUNSET               : 38 39
error                : 

Nonterminals, with rules where they appear

complexdate          : 3 4 5
datelist             : 7 9 11 12 21
datelist1            : 14 24
datelist2            : 14 27
daterange            : 8 10
daylist              : 17 31
dayrange             : 18
exc_weekdays         : 41 42 43
exclusion            : 11 12 19
schedule             : 1 0
timerange            : 34 35
timeslice            : 1 2
timeslots            : 7 8 9 10 11 12 13 14 15 16 17 18 19 34

Parsing method: LALR

state 0

    (0) S' -> . schedule
    (1) schedule -> . timeslice schedule
    (2) schedule -> . timeslice
    (3) timeslice -> . complexdate GROUP
    (4) timeslice -> . complexdate AND
    (5) timeslice -> . complexdate
    (6) complexdate -> . MONTH DATE AND
    (7) complexdate -> . MONTH datelist timeslots
    (8) complexdate -> . MONTH daterange timeslots
    (9) complexdate -> . datelist timeslots
    (10) complexdate -> . daterange timeslots
    (11) complexdate -> . datelist timeslots exclusion
    (12) complexdate -> . MONTH datelist timeslots exclusion
    (13) complexdate -> . MONTH DATE RANGE MONTH DATE timeslots
    (14) complexdate -> . MONTH datelist1 MONTH datelist2 timeslots
    (15) complexdate -> . DAILY timeslots
    (16) complexdate -> . timeslots
    (17) complexdate -> . daylist timeslots
    (18) complexdate -> . dayrange timeslots
    (19) complexdate -> . DAILY timeslots exclusion
    (21) datelist -> . DATE datelist
    (22) datelist -> . DATE AND DATE
    (23) datelist -> . DATE
    (30) daterange -> . DATE RANGE DATE
    (34) timeslots -> . timerange timeslots
    (35) timeslots -> . timerange
    (31) daylist -> . DAY daylist
    (32) daylist -> . DAY AND DAY
    (33) daylist -> . DAY
    (20) dayrange -> . DAY RANGE DAY
    (36) timerange -> . HOUR RANGE HOUR
    (37) timerange -> . SUNRISE RANGE HOUR
    (38) timerange -> . HOUR RANGE SUNSET
    (39) timerange -> . SUNRISE RANGE SUNSET
    (40) timerange -> . H24

    MONTH           shift and go to state 4
    DAILY           shift and go to state 9
    DATE            shift and go to state 5
    DAY             shift and go to state 13
    HOUR            shift and go to state 14
    SUNRISE         shift and go to state 15
    H24             shift and go to state 16

    schedule                       shift and go to state 1
    timeslice                      shift and go to state 2
    complexdate                    shift and go to state 3
    datelist                       shift and go to state 6
    timeslots                      shift and go to state 7
    daterange                      shift and go to state 8
    daylist                        shift and go to state 10
    dayrange                       shift and go to state 11
    timerange                      shift and go to state 12

state 1

    (0) S' -> schedule .



state 2

    (1) schedule -> timeslice . schedule
    (2) schedule -> timeslice .
    (1) schedule -> . timeslice schedule
    (2) schedule -> . timeslice
    (3) timeslice -> . complexdate GROUP
    (4) timeslice -> . complexdate AND
    (5) timeslice -> . complexdate
    (6) complexdate -> . MONTH DATE AND
    (7) complexdate -> . MONTH datelist timeslots
    (8) complexdate -> . MONTH daterange timeslots
    (9) complexdate -> . datelist timeslots
    (10) complexdate -> . daterange timeslots
    (11) complexdate -> . datelist timeslots exclusion
    (12) complexdate -> . MONTH datelist timeslots exclusion
    (13) complexdate -> . MONTH DATE RANGE MONTH DATE timeslots
    (14) complexdate -> . MONTH datelist1 MONTH datelist2 timeslots
    (15) complexdate -> . DAILY timeslots
    (16) complexdate -> . timeslots
    (17) complexdate -> . daylist timeslots
    (18) complexdate -> . dayrange timeslots
    (19) complexdate -> . DAILY timeslots exclusion
    (21) datelist -> . DATE datelist
    (22) datelist -> . DATE AND DATE
    (23) datelist -> . DATE
    (30) daterange -> . DATE RANGE DATE
    (34) timeslots -> . timerange timeslots
    (35) timeslots -> . timerange
    (31) daylist -> . DAY daylist
    (32) daylist -> . DAY AND DAY
    (33) daylist -> . DAY
    (20) dayrange -> . DAY RANGE DAY
    (36) timerange -> . HOUR RANGE HOUR
    (37) timerange -> . SUNRISE RANGE HOUR
    (38) timerange -> . HOUR RANGE SUNSET
    (39) timerange -> . SUNRISE RANGE SUNSET
    (40) timerange -> . H24

    $end            reduce using rule 2 (schedule -> timeslice .)
    MONTH           shift and go to state 4
    DAILY           shift and go to state 9
    DATE            shift and go to state 5
    DAY             shift and go to state 13
    HOUR            shift and go to state 14
    SUNRISE         shift and go to state 15
    H24             shift and go to state 16

    timeslice                      shift and go to state 2
    schedule                       shift and go to state 17
    complexdate                    shift and go to state 3
    datelist                       shift and go to state 6
    timeslots                      shift and go to state 7
    daterange                      shift and go to state 8
    daylist                        shift and go to state 10
    dayrange                       shift and go to state 11
    timerange                      shift and go to state 12

state 3

    (3) timeslice -> complexdate . GROUP
    (4) timeslice -> complexdate . AND
    (5) timeslice -> complexdate .

    GROUP           shift and go to state 18
    AND             shift and go to state 19
    MONTH           reduce using rule 5 (timeslice -> complexdate .)
    DAILY           reduce using rule 5 (timeslice -> complexdate .)
    DATE            reduce using rule 5 (timeslice -> complexdate .)
    DAY             reduce using rule 5 (timeslice -> complexdate .)
    HOUR            reduce using rule 5 (timeslice -> complexdate .)
    SUNRISE         reduce using rule 5 (timeslice -> complexdate .)
    H24             reduce using rule 5 (timeslice -> complexdate .)
    $end            reduce using rule 5 (timeslice -> complexdate .)


state 4

    (6) complexdate -> MONTH . DATE AND
    (7) complexdate -> MONTH . datelist timeslots
    (8) complexdate -> MONTH . daterange timeslots
    (12) complexdate -> MONTH . datelist timeslots exclusion
    (13) complexdate -> MONTH . DATE RANGE MONTH DATE timeslots
    (14) complexdate -> MONTH . datelist1 MONTH datelist2 timeslots
    (21) datelist -> . DATE datelist
    (22) datelist -> . DATE AND DATE
    (23) datelist -> . DATE
    (30) daterange -> . DATE RANGE DATE
    (24) datelist1 -> . DATE datelist1
    (25) datelist1 -> . DATE AND DATE
    (26) datelist1 -> . DATE

    DATE            shift and go to state 20

    datelist                       shift and go to state 21
    daterange                      shift and go to state 22
    datelist1                      shift and go to state 23

state 5

    (21) datelist -> DATE . datelist
    (22) datelist -> DATE . AND DATE
    (23) datelist -> DATE .
    (30) daterange -> DATE . RANGE DATE
    (21) datelist -> . DATE datelist
    (22) datelist -> . DATE AND DATE
    (23) datelist -> . DATE

    AND             shift and go to state 26
    HOUR            reduce using rule 23 (datelist -> DATE .)
    SUNRISE         reduce using rule 23 (datelist -> DATE .)
    H24             reduce using rule 23 (datelist -> DATE .)
    RANGE           shift and go to state 27
    DATE            shift and go to state 24

    datelist                       shift and go to state 25

state 6

    (9) complexdate -> datelist . timeslots
    (11) complexdate -> datelist . timeslots exclusion
    (34) timeslots -> . timerange timeslots
    (35) timeslots -> . timerange
    (36) timerange -> . HOUR RANGE HOUR
    (37) timerange -> . SUNRISE RANGE HOUR
    (38) timerange -> . HOUR RANGE SUNSET
    (39) timerange -> . SUNRISE RANGE SUNSET
    (40) timerange -> . H24

    HOUR            shift and go to state 14
    SUNRISE         shift and go to state 15
    H24             shift and go to state 16

    timeslots                      shift and go to state 28
    timerange                      shift and go to state 12

state 7

    (16) complexdate -> timeslots .

    GROUP           reduce using rule 16 (complexdate -> timeslots .)
    AND             reduce using rule 16 (complexdate -> timeslots .)
    MONTH           reduce using rule 16 (complexdate -> timeslots .)
    DAILY           reduce using rule 16 (complexdate -> timeslots .)
    DATE            reduce using rule 16 (complexdate -> timeslots .)
    DAY             reduce using rule 16 (complexdate -> timeslots .)
    HOUR            reduce using rule 16 (complexdate -> timeslots .)
    SUNRISE         reduce using rule 16 (complexdate -> timeslots .)
    H24             reduce using rule 16 (complexdate -> timeslots .)
    $end            reduce using rule 16 (complexdate -> timeslots .)


state 8

    (10) complexdate -> daterange . timeslots
    (34) timeslots -> . timerange timeslots
    (35) timeslots -> . timerange
    (36) timerange -> . HOUR RANGE HOUR
    (37) timerange -> . SUNRISE RANGE HOUR
    (38) timerange -> . HOUR RANGE SUNSET
    (39) timerange -> . SUNRISE RANGE SUNSET
    (40) timerange -> . H24

    HOUR            shift and go to state 14
    SUNRISE         shift and go to state 15
    H24             shift and go to state 16

    timeslots                      shift and go to state 29
    timerange                      shift and go to state 12

state 9

    (15) complexdate -> DAILY . timeslots
    (19) complexdate -> DAILY . timeslots exclusion
    (34) timeslots -> . timerange timeslots
    (35) timeslots -> . timerange
    (36) timerange -> . HOUR RANGE HOUR
    (37) timerange -> . SUNRISE RANGE HOUR
    (38) timerange -> . HOUR RANGE SUNSET
    (39) timerange -> . SUNRISE RANGE SUNSET
    (40) timerange -> . H24

    HOUR            shift and go to state 14
    SUNRISE         shift and go to state 15
    H24             shift and go to state 16

    timeslots                      shift and go to state 30
    timerange                      shift and go to state 12

state 10

    (17) complexdate -> daylist . timeslots
    (34) timeslots -> . timerange timeslots
    (35) timeslots -> . timerange
    (36) timerange -> . HOUR RANGE HOUR
    (37) timerange -> . SUNRISE RANGE HOUR
    (38) timerange -> . HOUR RANGE SUNSET
    (39) timerange -> . SUNRISE RANGE SUNSET
    (40) timerange -> . H24

    HOUR            shift and go to state 14
    SUNRISE         shift and go to state 15
    H24             shift and go to state 16

    timeslots                      shift and go to state 31
    timerange                      shift and go to state 12

state 11

    (18) complexdate -> dayrange . timeslots
    (34) timeslots -> . timerange timeslots
    (35) timeslots -> . timerange
    (36) timerange -> . HOUR RANGE HOUR
    (37) timerange -> . SUNRISE RANGE HOUR
    (38) timerange -> . HOUR RANGE SUNSET
    (39) timerange -> . SUNRISE RANGE SUNSET
    (40) timerange -> . H24

    HOUR            shift and go to state 14
    SUNRISE         shift and go to state 15
    H24             shift and go to state 16

    timeslots                      shift and go to state 32
    timerange                      shift and go to state 12

state 12

    (34) timeslots -> timerange . timeslots
    (35) timeslots -> timerange .
    (34) timeslots -> . timerange timeslots
    (35) timeslots -> . timerange
    (36) timerange -> . HOUR RANGE HOUR
    (37) timerange -> . SUNRISE RANGE HOUR
    (38) timerange -> . HOUR RANGE SUNSET
    (39) timerange -> . SUNRISE RANGE SUNSET
    (40) timerange -> . H24

  ! shift/reduce conflict for HOUR resolved as shift
  ! shift/reduce conflict for SUNRISE resolved as shift
  ! shift/reduce conflict for H24 resolved as shift
    GROUP           reduce using rule 35 (timeslots -> timerange .)
    AND             reduce using rule 35 (timeslots -> timerange .)
    MONTH           reduce using rule 35 (timeslots -> timerange .)
    DAILY           reduce using rule 35 (timeslots -> timerange .)
    DATE            reduce using rule 35 (timeslots -> timerange .)
    DAY             reduce using rule 35 (timeslots -> timerange .)
    $end            reduce using rule 35 (timeslots -> timerange .)
    EXC             reduce using rule 35 (timeslots -> timerange .)
    HOUR            shift and go to state 14
    SUNRISE         shift and go to state 15
    H24             shift and go to state 16

  ! HOUR            [ reduce using rule 35 (timeslots -> timerange .) ]
  ! SUNRISE         [ reduce using rule 35 (timeslots -> timerange .) ]
  ! H24             [ reduce using rule 35 (timeslots -> timerange .) ]

    timerange                      shift and go to state 12
    timeslots                      shift and go to state 33

state 13

    (31) daylist -> DAY . daylist
    (32) daylist -> DAY . AND DAY
    (33) daylist -> DAY .
    (20) dayrange -> DAY . RANGE DAY
    (31) daylist -> . DAY daylist
    (32) daylist -> . DAY AND DAY
    (33) daylist -> . DAY

    AND             shift and go to state 36
    HOUR            reduce using rule 33 (daylist -> DAY .)
    SUNRISE         reduce using rule 33 (daylist -> DAY .)
    H24             reduce using rule 33 (daylist -> DAY .)
    RANGE           shift and go to state 37
    DAY             shift and go to state 34

    daylist                        shift and go to state 35

state 14

    (36) timerange -> HOUR . RANGE HOUR
    (38) timerange -> HOUR . RANGE SUNSET

    RANGE           shift and go to state 38


state 15

    (37) timerange -> SUNRISE . RANGE HOUR
    (39) timerange -> SUNRISE . RANGE SUNSET

    RANGE           shift and go to state 39


state 16

    (40) timerange -> H24 .

    HOUR            reduce using rule 40 (timerange -> H24 .)
    SUNRISE         reduce using rule 40 (timerange -> H24 .)
    H24             reduce using rule 40 (timerange -> H24 .)
    GROUP           reduce using rule 40 (timerange -> H24 .)
    AND             reduce using rule 40 (timerange -> H24 .)
    MONTH           reduce using rule 40 (timerange -> H24 .)
    DAILY           reduce using rule 40 (timerange -> H24 .)
    DATE            reduce using rule 40 (timerange -> H24 .)
    DAY             reduce using rule 40 (timerange -> H24 .)
    $end            reduce using rule 40 (timerange -> H24 .)
    EXC             reduce using rule 40 (timerange -> H24 .)


state 17

    (1) schedule -> timeslice schedule .

    $end            reduce using rule 1 (schedule -> timeslice schedule .)


state 18

    (3) timeslice -> complexdate GROUP .

    MONTH           reduce using rule 3 (timeslice -> complexdate GROUP .)
    DAILY           reduce using rule 3 (timeslice -> complexdate GROUP .)
    DATE            reduce using rule 3 (timeslice -> complexdate GROUP .)
    DAY             reduce using rule 3 (timeslice -> complexdate GROUP .)
    HOUR            reduce using rule 3 (timeslice -> complexdate GROUP .)
    SUNRISE         reduce using rule 3 (timeslice -> complexdate GROUP .)
    H24             reduce using rule 3 (timeslice -> complexdate GROUP .)
    $end            reduce using rule 3 (timeslice -> complexdate GROUP .)


state 19

    (4) timeslice -> complexdate AND .

    MONTH           reduce using rule 4 (timeslice -> complexdate AND .)
    DAILY           reduce using rule 4 (timeslice -> complexdate AND .)
    DATE            reduce using rule 4 (timeslice -> complexdate AND .)
    DAY             reduce using rule 4 (timeslice -> complexdate AND .)
    HOUR            reduce using rule 4 (timeslice -> complexdate AND .)
    SUNRISE         reduce using rule 4 (timeslice -> complexdate AND .)
    H24             reduce using rule 4 (timeslice -> complexdate AND .)
    $end            reduce using rule 4 (timeslice -> complexdate AND .)


state 20

    (6) complexdate -> MONTH DATE . AND
    (13) complexdate -> MONTH DATE . RANGE MONTH DATE timeslots
    (21) datelist -> DATE . datelist
    (22) datelist -> DATE . AND DATE
    (23) datelist -> DATE .
    (30) daterange -> DATE . RANGE DATE
    (24) datelist1 -> DATE . datelist1
    (25) datelist1 -> DATE . AND DATE
    (26) datelist1 -> DATE .
    (21) datelist -> . DATE datelist
    (22) datelist -> . DATE AND DATE
    (23) datelist -> . DATE
    (24) datelist1 -> . DATE datelist1
    (25) datelist1 -> . DATE AND DATE
    (26) datelist1 -> . DATE

    AND             shift and go to state 41
    RANGE           shift and go to state 42
    HOUR            reduce using rule 23 (datelist -> DATE .)
    SUNRISE         reduce using rule 23 (datelist -> DATE .)
    H24             reduce using rule 23 (datelist -> DATE .)
    MONTH           reduce using rule 26 (datelist1 -> DATE .)
    DATE            shift and go to state 40

    datelist                       shift and go to state 25
    datelist1                      shift and go to state 43

state 21

    (7) complexdate -> MONTH datelist . timeslots
    (12) complexdate -> MONTH datelist . timeslots exclusion
    (34) timeslots -> . timerange timeslots
    (35) timeslots -> . timerange
    (36) timerange -> . HOUR RANGE HOUR
    (37) timerange -> . SUNRISE RANGE HOUR
    (38) timerange -> . HOUR RANGE SUNSET
    (39) timerange -> . SUNRISE RANGE SUNSET
    (40) timerange -> . H24

    HOUR            shift and go to state 14
    SUNRISE         shift and go to state 15
    H24             shift and go to state 16

    timeslots                      shift and go to state 44
    timerange                      shift and go to state 12

state 22

    (8) complexdate -> MONTH daterange . timeslots
    (34) timeslots -> . timerange timeslots
    (35) timeslots -> . timerange
    (36) timerange -> . HOUR RANGE HOUR
    (37) timerange -> . SUNRISE RANGE HOUR
    (38) timerange -> . HOUR RANGE SUNSET
    (39) timerange -> . SUNRISE RANGE SUNSET
    (40) timerange -> . H24

    HOUR            shift and go to state 14
    SUNRISE         shift and go to state 15
    H24             shift and go to state 16

    timeslots                      shift and go to state 45
    timerange                      shift and go to state 12

state 23

    (14) complexdate -> MONTH datelist1 . MONTH datelist2 timeslots

    MONTH           shift and go to state 46


state 24

    (21) datelist -> DATE . datelist
    (22) datelist -> DATE . AND DATE
    (23) datelist -> DATE .
    (21) datelist -> . DATE datelist
    (22) datelist -> . DATE AND DATE
    (23) datelist -> . DATE

    AND             shift and go to state 26
    HOUR            reduce using rule 23 (datelist -> DATE .)
    SUNRISE         reduce using rule 23 (datelist -> DATE .)
    H24             reduce using rule 23 (datelist -> DATE .)
    DATE            shift and go to state 24

    datelist                       shift and go to state 25

state 25

    (21) datelist -> DATE datelist .

    HOUR            reduce using rule 21 (datelist -> DATE datelist .)
    SUNRISE         reduce using rule 21 (datelist -> DATE datelist .)
    H24             reduce using rule 21 (datelist -> DATE datelist .)


state 26

    (22) datelist -> DATE AND . DATE

    DATE            shift and go to state 47


state 27

    (30) daterange -> DATE RANGE . DATE

    DATE            shift and go to state 48


state 28

    (9) complexdate -> datelist timeslots .
    (11) complexdate -> datelist timeslots . exclusion
    (41) exclusion -> . EXC exc_weekdays

    GROUP           reduce using rule 9 (complexdate -> datelist timeslots .)
    AND             reduce using rule 9 (complexdate -> datelist timeslots .)
    MONTH           reduce using rule 9 (complexdate -> datelist timeslots .)
    DAILY           reduce using rule 9 (complexdate -> datelist timeslots .)
    DATE            reduce using rule 9 (complexdate -> datelist timeslots .)
    DAY             reduce using rule 9 (complexdate -> datelist timeslots .)
    HOUR            reduce using rule 9 (complexdate -> datelist timeslots .)
    SUNRISE         reduce using rule 9 (complexdate -> datelist timeslots .)
    H24             reduce using rule 9 (complexdate -> datelist timeslots .)
    $end            reduce using rule 9 (complexdate -> datelist timeslots .)
    EXC             shift and go to state 50

    exclusion                      shift and go to state 49

state 29

    (10) complexdate -> daterange timeslots .

    GROUP           reduce using rule 10 (complexdate -> daterange timeslots .)
    AND             reduce using rule 10 (complexdate -> daterange timeslots .)
    MONTH           reduce using rule 10 (complexdate -> daterange timeslots .)
    DAILY           reduce using rule 10 (complexdate -> daterange timeslots .)
    DATE            reduce using rule 10 (complexdate -> daterange timeslots .)
    DAY             reduce using rule 10 (complexdate -> daterange timeslots .)
    HOUR            reduce using rule 10 (complexdate -> daterange timeslots .)
    SUNRISE         reduce using rule 10 (complexdate -> daterange timeslots .)
    H24             reduce using rule 10 (complexdate -> daterange timeslots .)
    $end            reduce using rule 10 (complexdate -> daterange timeslots .)


state 30

    (15) complexdate -> DAILY timeslots .
    (19) complexdate -> DAILY timeslots . exclusion
    (41) exclusion -> . EXC exc_weekdays

    GROUP           reduce using rule 15 (complexdate -> DAILY timeslots .)
    AND             reduce using rule 15 (complexdate -> DAILY timeslots .)
    MONTH           reduce using rule 15 (complexdate -> DAILY timeslots .)
    DAILY           reduce using rule 15 (complexdate -> DAILY timeslots .)
    DATE            reduce using rule 15 (complexdate -> DAILY timeslots .)
    DAY             reduce using rule 15 (complexdate -> DAILY timeslots .)
    HOUR            reduce using rule 15 (complexdate -> DAILY timeslots .)
    SUNRISE         reduce using rule 15 (complexdate -> DAILY timeslots .)
    H24             reduce using rule 15 (complexdate -> DAILY timeslots .)
    $end            reduce using rule 15 (complexdate -> DAILY timeslots .)
    EXC             shift and go to state 50

    exclusion                      shift and go to state 51

state 31

    (17) complexdate -> daylist timeslots .

    GROUP           reduce using rule 17 (complexdate -> daylist timeslots .)
    AND             reduce using rule 17 (complexdate -> daylist timeslots .)
    MONTH           reduce using rule 17 (complexdate -> daylist timeslots .)
    DAILY           reduce using rule 17 (complexdate -> daylist timeslots .)
    DATE            reduce using rule 17 (complexdate -> daylist timeslots .)
    DAY             reduce using rule 17 (complexdate -> daylist timeslots .)
    HOUR            reduce using rule 17 (complexdate -> daylist timeslots .)
    SUNRISE         reduce using rule 17 (complexdate -> daylist timeslots .)
    H24             reduce using rule 17 (complexdate -> daylist timeslots .)
    $end            reduce using rule 17 (complexdate -> daylist timeslots .)


state 32

    (18) complexdate -> dayrange timeslots .

    GROUP           reduce using rule 18 (complexdate -> dayrange timeslots .)
    AND             reduce using rule 18 (complexdate -> dayrange timeslots .)
    MONTH           reduce using rule 18 (complexdate -> dayrange timeslots .)
    DAILY           reduce using rule 18 (complexdate -> dayrange timeslots .)
    DATE            reduce using rule 18 (complexdate -> dayrange timeslots .)
    DAY             reduce using rule 18 (complexdate -> dayrange timeslots .)
    HOUR            reduce using rule 18 (complexdate -> dayrange timeslots .)
    SUNRISE         reduce using rule 18 (complexdate -> dayrange timeslots .)
    H24             reduce using rule 18 (complexdate -> dayrange timeslots .)
    $end            reduce using rule 18 (complexdate -> dayrange timeslots .)


state 33

    (34) timeslots -> timerange timeslots .

    GROUP           reduce using rule 34 (timeslots -> timerange timeslots .)
    AND             reduce using rule 34 (timeslots -> timerange timeslots .)
    MONTH           reduce using rule 34 (timeslots -> timerange timeslots .)
    DAILY           reduce using rule 34 (timeslots -> timerange timeslots .)
    DATE            reduce using rule 34 (timeslots -> timerange timeslots .)
    DAY             reduce using rule 34 (timeslots -> timerange timeslots .)
    HOUR            reduce using rule 34 (timeslots -> timerange timeslots .)
    SUNRISE         reduce using rule 34 (timeslots -> timerange timeslots .)
    H24             reduce using rule 34 (timeslots -> timerange timeslots .)
    $end            reduce using rule 34 (timeslots -> timerange timeslots .)
    EXC             reduce using rule 34 (timeslots -> timerange timeslots .)


state 34

    (31) daylist -> DAY . daylist
    (32) daylist -> DAY . AND DAY
    (33) daylist -> DAY .
    (31) daylist -> . DAY daylist
    (32) daylist -> . DAY AND DAY
    (33) daylist -> . DAY

    AND             shift and go to state 36
    HOUR            reduce using rule 33 (daylist -> DAY .)
    SUNRISE         reduce using rule 33 (daylist -> DAY .)
    H24             reduce using rule 33 (daylist -> DAY .)
    DAY             shift and go to state 34

    daylist                        shift and go to state 35

state 35

    (31) daylist -> DAY daylist .

    HOUR            reduce using rule 31 (daylist -> DAY daylist .)
    SUNRISE         reduce using rule 31 (daylist -> DAY daylist .)
    H24             reduce using rule 31 (daylist -> DAY daylist .)


state 36

    (32) daylist -> DAY AND . DAY

    DAY             shift and go to state 52


state 37

    (20) dayrange -> DAY RANGE . DAY

    DAY             shift and go to state 53


state 38

    (36) timerange -> HOUR RANGE . HOUR
    (38) timerange -> HOUR RANGE . SUNSET

    HOUR            shift and go to state 54
    SUNSET          shift and go to state 55


state 39

    (37) timerange -> SUNRISE RANGE . HOUR
    (39) timerange -> SUNRISE RANGE . SUNSET

    HOUR            shift and go to state 56
    SUNSET          shift and go to state 57


state 40

    (21) datelist -> DATE . datelist
    (22) datelist -> DATE . AND DATE
    (23) datelist -> DATE .
    (24) datelist1 -> DATE . datelist1
    (25) datelist1 -> DATE . AND DATE
    (26) datelist1 -> DATE .
    (21) datelist -> . DATE datelist
    (22) datelist -> . DATE AND DATE
    (23) datelist -> . DATE
    (24) datelist1 -> . DATE datelist1
    (25) datelist1 -> . DATE AND DATE
    (26) datelist1 -> . DATE

    AND             shift and go to state 58
    HOUR            reduce using rule 23 (datelist -> DATE .)
    SUNRISE         reduce using rule 23 (datelist -> DATE .)
    H24             reduce using rule 23 (datelist -> DATE .)
    MONTH           reduce using rule 26 (datelist1 -> DATE .)
    DATE            shift and go to state 40

    datelist                       shift and go to state 25
    datelist1                      shift and go to state 43

state 41

    (6) complexdate -> MONTH DATE AND .
    (22) datelist -> DATE AND . DATE
    (25) datelist1 -> DATE AND . DATE

  ! shift/reduce conflict for DATE resolved as shift
    GROUP           reduce using rule 6 (complexdate -> MONTH DATE AND .)
    AND             reduce using rule 6 (complexdate -> MONTH DATE AND .)
    MONTH           reduce using rule 6 (complexdate -> MONTH DATE AND .)
    DAILY           reduce using rule 6 (complexdate -> MONTH DATE AND .)
    DAY             reduce using rule 6 (complexdate -> MONTH DATE AND .)
    HOUR            reduce using rule 6 (complexdate -> MONTH DATE AND .)
    SUNRISE         reduce using rule 6 (complexdate -> MONTH DATE AND .)
    H24             reduce using rule 6 (complexdate -> MONTH DATE AND .)
    $end            reduce using rule 6 (complexdate -> MONTH DATE AND .)
    DATE            shift and go to state 59

  ! DATE            [ reduce using rule 6 (complexdate -> MONTH DATE AND .) ]


state 42

    (13) complexdate -> MONTH DATE RANGE . MONTH DATE timeslots
    (30) daterange -> DATE RANGE . DATE

    MONTH           shift and go to state 60
    DATE            shift and go to state 48


state 43

    (24) datelist1 -> DATE datelist1 .

    MONTH           reduce using rule 24 (datelist1 -> DATE datelist1 .)


state 44

    (7) complexdate -> MONTH datelist timeslots .
    (12) complexdate -> MONTH datelist timeslots . exclusion
    (41) exclusion -> . EXC exc_weekdays

    GROUP           reduce using rule 7 (complexdate -> MONTH datelist timeslots .)
    AND             reduce using rule 7 (complexdate -> MONTH datelist timeslots .)
    MONTH           reduce using rule 7 (complexdate -> MONTH datelist timeslots .)
    DAILY           reduce using rule 7 (complexdate -> MONTH datelist timeslots .)
    DATE            reduce using rule 7 (complexdate -> MONTH datelist timeslots .)
    DAY             reduce using rule 7 (complexdate -> MONTH datelist timeslots .)
    HOUR            reduce using rule 7 (complexdate -> MONTH datelist timeslots .)
    SUNRISE         reduce using rule 7 (complexdate -> MONTH datelist timeslots .)
    H24             reduce using rule 7 (complexdate -> MONTH datelist timeslots .)
    $end            reduce using rule 7 (complexdate -> MONTH datelist timeslots .)
    EXC             shift and go to state 50

    exclusion                      shift and go to state 61

state 45

    (8) complexdate -> MONTH daterange timeslots .

    GROUP           reduce using rule 8 (complexdate -> MONTH daterange timeslots .)
    AND             reduce using rule 8 (complexdate -> MONTH daterange timeslots .)
    MONTH           reduce using rule 8 (complexdate -> MONTH daterange timeslots .)
    DAILY           reduce using rule 8 (complexdate -> MONTH daterange timeslots .)
    DATE            reduce using rule 8 (complexdate -> MONTH daterange timeslots .)
    DAY             reduce using rule 8 (complexdate -> MONTH daterange timeslots .)
    HOUR            reduce using rule 8 (complexdate -> MONTH daterange timeslots .)
    SUNRISE         reduce using rule 8 (complexdate -> MONTH daterange timeslots .)
    H24             reduce using rule 8 (complexdate -> MONTH daterange timeslots .)
    $end            reduce using rule 8 (complexdate -> MONTH daterange timeslots .)


state 46

    (14) complexdate -> MONTH datelist1 MONTH . datelist2 timeslots
    (27) datelist2 -> . DATE datelist2
    (28) datelist2 -> . DATE AND DATE
    (29) datelist2 -> . DATE

    DATE            shift and go to state 63

    datelist2                      shift and go to state 62

state 47

    (22) datelist -> DATE AND DATE .

    HOUR            reduce using rule 22 (datelist -> DATE AND DATE .)
    SUNRISE         reduce using rule 22 (datelist -> DATE AND DATE .)
    H24             reduce using rule 22 (datelist -> DATE AND DATE .)


state 48

    (30) daterange -> DATE RANGE DATE .

    HOUR            reduce using rule 30 (daterange -> DATE RANGE DATE .)
    SUNRISE         reduce using rule 30 (daterange -> DATE RANGE DATE .)
    H24             reduce using rule 30 (daterange -> DATE RANGE DATE .)


state 49
